--- a/custom_components/melcloud_custom/manifest.json
+++ b/custom_components/melcloud_custom/manifest.json
@@ -1,12 +1,12 @@
 {
   "domain": "melcloud_custom",
-  "name": "MELCloud Custom",
-  "codeowners": ["@ollo69"],
+  "name": "MELCloud Custom ERV",
+  "codeowners": ["@adobrotvorskiy"],
   "config_flow": true,
-  "documentation": "https://github.com/ollo69/ha-melcloud-custom",
+  "documentation": "https://github.com/adobrotvorskiy/ha-melcloud-ERV",
   "integration_type": "hub",
   "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/ollo69/ha-melcloud-custom/issues",
+  "issue_tracker": "https://github.com/adobrotvorskiy/ha-melcloud-ERV/issues",
   "requirements": ["pymelcloud @ git+https://github.com/adobrotvorskiy/pymelcloud"],
   "version": "0.3.1"
 }
