--- a/custom_components/melcloud_custom/manifest.json
+++ b/custom_components/melcloud_custom/manifest.json
@@ -7,6 +7,6 @@
   "integration_type": "hub",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/adobrotvorskiy/ha-melcloud-ERV/issues",
-  "requirements": ["pymelcloud @ git+https://github.com/adobrotvorskiy/pymelcloud"],
+  "requirements": ["pymelcloud_erv @ git+https://github.com/adobrotvorskiy/pymelcloud"],
   "version": "0.3.1"
 }
