--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ pre-commit==3.0.0
 flake8==6.0.0
 isort==5.12.0
 black==23.1.0
-pymelcloud_erv @ git+https://github.com/adobrotvorskiy/pymelcloud_erv
+pymelclouderv @ git+https://github.com/adobrotvorskiy/pymelclouderv
+pymelcloud @ git+https://github.com/adobrotvorskiy/pymelcloud
