--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -4,4 +4,4 @@ pytest==7.3.1
 #pytest-homeassistant
 pytest-homeassistant-custom-component==0.13.42
 # From our manifest.json for our custom component
-pymelclouderv @ git+https://github.com/adobrotvorskiy/pymelclouderv
+pymelclouderv @ git+https://github.com/adobrotvorskiy/pymelclouderv@v2.11.2
