--- a/custom_components/melcloud_custom/manifest.json
+++ b/custom_components/melcloud_custom/manifest.json
@@ -7,5 +7,6 @@
   "integration_type": "hub",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/adobrotvorskiy/ha-melcloud-ERV/issues",
-  "version": "0.3.1"
+  "requirements": ["git+https://github.com/adobrotvorskiy/pymelclouderv@releases/tag/v2.11.2"],
+  "version": "1.4"
 }
