--- a/custom_components/melcloud_custom/manifest.json
+++ b/custom_components/melcloud_custom/manifest.json
@@ -7,6 +7,6 @@
   "integration_type": "hub",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/adobrotvorskiy/ha-melcloud-ERV/issues",
-  "requirements": ["git+https://github.com/adobrotvorskiy/pymelclouderv"],
+  "requirements": "git+https://github.com/adobrotvorskiy/pymelclouderv",
   "version": "1.4"
 }
