--- a/custom_components/melcloud_custom/manifest.json
+++ b/custom_components/melcloud_custom/manifest.json
@@ -7,5 +7,5 @@
   "integration_type": "hub",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/adobrotvorskiy/ha-melcloud-ERV/issues",
-  "requirements": ["git+https://github.com/adobrotvorskiy/pymelclouderv@branch"],
+  "requirements": ["git+https://github.com/adobrotvorskiy/pymelclouderv@master"],
 }
