--- a/custom_components/melcloud_custom/manifest.json
+++ b/custom_components/melcloud_custom/manifest.json
@@ -8,4 +8,5 @@
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/adobrotvorskiy/ha-melcloud-ERV/issues",
   "requirements": ["git+https://github.com/adobrotvorskiy/pymelclouderv@master"],
+  "version": "1.8"
 }
